--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vercel/postgres": "^0.10.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "datastructures-js": "^13.0.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
