--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.454.0",
     "next": "15.0.2",
+    "papaparse": "^5.4.1",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-dropzone": "^14.3.5",
@@ -38,6 +39,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
