--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
+    "rsuite": "^5.74.2",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
